# haskell_fop

./: README.md  haskell-fop.cabal
app/: Main.hs
src/: MyLib.hs
