cabal-version:      2.4
name:               haskell-fop
version:            0.1.0.0

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell-fop
    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.0,
        haskell-fop

    hs-source-dirs:   app
    default-language: Haskell2010
